<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/home"
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_selector"/>

    <item
        android:title="@string/schedule"
        android:id="@+id/scheduleFragment"
        android:icon="@drawable/schedule_selector"/>

    <item
        android:title="@string/pomodoro"
        android:id="@+id/pomodoroFragment"
        android:icon="@drawable/pomodoro_selector"/>

    <item
        android:title="@string/tasks"
        android:id="@+id/tasksFragment"
        android:icon="@drawable/tasks_selector"/>

    <item
        android:title="@string/store"
        android:id="@+id/storeFragment"
        android:icon="@drawable/store_selector"/>


</menu>